--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Wifi livre em São Paulo</title>
+    <meta name="description" content="Locais públicos em São Paulo com acesso livre e gratuito a rede wifi.">
+
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
 
     <link rel="stylesheet" type="text/css" href="css/core.min.css" />
